# article-extraction-benchmark

./: .gitignore  LICENSE  Makefile  README.rst  evaluate.py  ground-truth.json  requirements.txt  run_boilerpipe.py  run_dragnet.py  run_html_text.py  run_newspaper.py  run_readability.py  run_xpath_text.py  tests.py
.github/workflows/: evaluate.yml
extractors/: go_domdistiller.py  output_util.py  run_beautifulsoup.py  run_boilerpipe.py  run_boilerpy3.py  run_dragnet.py  run_go_readability.py  run_go_readability_readeck.py  run_go_trafilatura.py  run_goose3.py  run_html2text.py  run_html_text.py  run_inscriptis.py  run_justext.py  run_news_please.py  run_newspaper.py  run_readability.py  run_readability_js.py  run_resiliparse.py  run_rust.py  run_trafilatura.py  run_xpath_text.py
extractors/go_domdistiller/: .gitignore  Makefile  README.rst  cli.go  (+2 more)
extractors/rust_extractors/: Cargo.toml  Makefile
extractors/rust_extractors/src/: main.rs
output/: AutoExtract.json  Diffbot.json  august.json  beautifulsoup.json  boilerpipe.json  boilerpipe_rs.json  boilerpy3.json  dom_smoothie.json  dragnet.json  fast_html2md.json  go_domdistiller.json  go_readability.json  go_readability_fork.json  go_trafilatura.json  goose3.json  html-text.json  html2md_rs.json  html2text.json  html2text_rs.json  inscriptis.json  justext.json  llm_readability.json  mdka.json  nanohtml2text.json  news_please.json  newspaper.json  readability.json  readability_js.json  readability_rs.json  readabilityrs.json  readable_readability.json  resiliparse.json  rs_trafilatura.json  trafilatura.json
(+18 files in other folders)
